--- a/portfolio/r/notebookTest.Rmd
+++ b/portfolio/r/notebookTest.Rmd
@@ -10,6 +10,10 @@ Try executing this chunk by clicking the *Run* button within the chunk or by pla
 ```{r}
 x<-c(0,1,2,3,4,5,6,7,8,9)
 y<-c(0.2,1.7,2.1,3.2,4.3,5.4,6.2,7.9,8.2,8.7)
+
+plot(x,y, main="Plot Test")
+
+
 ```
 
 Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
