--- a/portfolio/r/notebookTest.Rmd
+++ b/portfolio/r/notebookTest.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "R Notebook"
+title: "Basic Plot in X-Y Coordinate System"
 output: html_notebook
 ---
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
+The following code sets up two data vectors and then creates a simple plot using ordered pairs selected from the two vectors. The title is customized in the plot command. 
 
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Ctrl+Shift+Enter*. 
+For more links, please see [The Diversity and Ecology Blog](http://www.diversityandecology.blogspot.com)
 
 ```{r}
 x<-c(0,1,2,3,4,5,6,7,8,9)
@@ -16,6 +16,3 @@ plot(x,y, main="Plot Test")
 
 ```
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
-
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
