--- a/contact.Rmd
+++ b/contact.Rmd
@@ -4,8 +4,5 @@ title: "Contact"
 
 Let's get in touch! 
 
-![LinkedIn](<img src="graphics/icons/linkedin/2-color/In-2C-21px-R.png">)(https://www.linkedin.com/in/adam-santone-9a5a6a3/)
-
-![Research Gate](<img src="graphics/icons/researchGate/rg_180.png" height="21" width="21">)(https://www.researchgate.net/profile/Adam_Santone)
-
-
+[![LinkedIn](graphics/icons/linkedin/2-color/In-2C-21px-R.png)](https://www.linkedin.com/in/adam-santone-9a5a6a3/)
+![Research Gate](graphics/icons/researchGate/rg_180.png)(https://www.researchgate.net/profile/Adam_Santone)
