--- a/contact.Rmd
+++ b/contact.Rmd
@@ -4,9 +4,7 @@ title: "Contact"
 
 Let's get in touch! 
 
-[![LinkedIn](graphics/icons/linkedin/2-color/In-2C-21px-R.png)](https://www.linkedin.com/in/adam-santone-9a5a6a3/)
-[![Research Gate](graphics/icons/researchGate/rg_180.png =21x21)](https://www.researchgate.net/profile/Adam_Santone)
+[![LinkedIn](graphics/icons/linkedin/2-color/In-2C-21px-R.png)](https://www.linkedin.com/in/adam-santone-9a5a6a3/){:height="21px" width="21px"}
+[![Research Gate](graphics/icons/researchGate/rg_180.png)](https://www.researchgate.net/profile/Adam_Santone){:height="25px" width="25px"}
 
-
-[![Research Gate](<img src="/graphics/icons/researchGate/rg_180.png" alt="Research Gate" style="width: 21px;"/>)](https://www.researchgate.net/profile/Adam_Santone)
 
