--- a/contact.Rmd
+++ b/contact.Rmd
@@ -2,9 +2,21 @@
 title: "Contact"
 ---
 
+```
+img[alt="LinkedIn"] { 
+  max-width:  21px; 
+  display: block;
+}
+
+img[alt="ResearchGate"] { 
+  max-width:  25px; 
+  display: block;
+}
+```
+
 Let's get in touch! 
 
-[![LinkedIn](graphics/icons/linkedin/2-color/In-2C-21px-R.png)](https://www.linkedin.com/in/adam-santone-9a5a6a3/){:height="21px" width="21px"}
-[![Research Gate](graphics/icons/researchGate/rg_180.png)](https://www.researchgate.net/profile/Adam_Santone){:height="25px" width="25px"}
+[![LinkedIn](graphics/icons/linkedin/2-color/In-2C-21px-R.png)](https://www.linkedin.com/in/adam-santone-9a5a6a3/)
+[![ResearchGate](graphics/icons/researchGate/rg_180.png)](https://www.researchgate.net/profile/Adam_Santone)
 
 
