--- a/contact.Rmd
+++ b/contact.Rmd
@@ -20,3 +20,7 @@ Let's get in touch!
 [![ResearchGate](graphics/icons/researchGate/rg_180.png)](https://www.researchgate.net/profile/Adam_Santone)
 
 
+
+<a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><img src="graphics/icons/linkedin/2-color/In-2C-21px-R.png" align="left" height="48" width="48" ></a>
+
+
