--- a/contact.Rmd
+++ b/contact.Rmd
@@ -16,11 +16,7 @@ img[alt="ResearchGate"] {
 
 Let's get in touch! 
 
-[![LinkedIn](graphics/icons/linkedin/2-color/In-2C-21px-R.png)](https://www.linkedin.com/in/adam-santone-9a5a6a3/)
-[![ResearchGate](graphics/icons/researchGate/rg_180.png)](https://www.researchgate.net/profile/Adam_Santone)
-
-
-
-<a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><img src="graphics/icons/linkedin/2-color/In-2C-21px-R.png" align="left" height="48" width="48" ></a>
+<a href="https://www.linkedin.com/in/adam-santone-9a5a6a3/"><img src="graphics/icons/linkedin/2-color/In-2C-21px-R.png" align="left" height="25" width="25" ></a>
+<a href="https://www.researchgate.net/profile/Adam_Santone"><img src="graphics/icons/researchGate/rg_180.png" align="left" height="25" width="25" ></a>
 
 
