--- a/about.Rmd
+++ b/about.Rmd
@@ -2,9 +2,27 @@
 title: "About Me"
 ---
 
+```{r results="asis"}
+cat("
+<style>
+h1 {
+   color: red;
+}
+
+bg-img {
+  width: 100%;
+  height: 100%;
+  background: url('graphics/img/palms.jpg') center center no-repeat;
+  background-size: cover;
+} 
+
+</style>
+")
+```
+
 
 <div class="bg-img"></div>
 
-<h1>This should be blue</h1>
+<h1>This should be red</h1>
 
 Interdisciplinary researcher/developer with experience in quantitative and qualitative research for interactive 3D computer graphics, human spatial ability, data visualization, virtual and augmented reality, serious games, 3D modeling and printing, documentary-style video production and direction, statistical analysis, and K-12 STEM outreach for teacher professional development. Experience connecting people at local, municipal, state, and federal levels to ensure project success. Extensive background in life sciences including plant physiology and molecular biology with associated laboratory techniques. Career interests include human-computer interactions and interfaces, applications of human spatial ability research to gaming and immersive educational experiences, data science and data-driven decision making, advanced data perception methodologies, technology integration for K-12 education, life science outreach, and public informal STEM education.
