--- a/about.Rmd
+++ b/about.Rmd
@@ -12,7 +12,7 @@ body {
   text-align:left;
 }
 .textbox p{
-  font-family:arial;
+  padding:5px;
   text-align:left;
   font-size:14px;
   font-weight:normal;
