--- a/about.Rmd
+++ b/about.Rmd
@@ -4,24 +4,14 @@ title: "About Me"
 <head>
 <style>
 body {
-    background-image: url("graphics/img/palms.jpg");
+    /*background-image: url("graphics/img/palms.jpg");*/
     color:#ffffff;
+    background: #eee; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(rgba(190,60,90,0) , rgba(250,190,115,0));  /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(rgba(190,60,90,0), rgba(250,190,115,0));       /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(rgba(190,60,90,0), rgba(250,190,115,0));     /* For Firefox 3.6 to 15 */
+    background: linear-gradient(rgba(190,60,90,0) , rgba(250,190,115,0));      /* Standard syntax */
 }
-
-/*
-.textbox{
-  background:rgba(0,0,0,0.4);
-  text-align:left;
-}
-.textbox p{
-  padding:5px;
-  text-align:left;
-  font-size:14px;
-  font-weight:normal;
-  color:#ffffff;
-}
-*/
-
 </style>
 </head>
 
