--- a/game.Rmd
+++ b/game.Rmd
@@ -4,4 +4,4 @@ title: "Game Projects"
 
 ## Unity 
 * [Blasteroids](../portfolio/unity/Blasteroids_html5/blasteroids_html5.html)
-
+* <a href="../portfolio/unity/Blasteroids_html5/blasteroids_html5.html" target="_blank">Blasteroids</a>
