--- a/3D.Rmd
+++ b/3D.Rmd
@@ -6,8 +6,8 @@ title: "3D Projects"
 
 <!-- Pitchers -->
 <div
-  <img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" style="width:20%">
-  <img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" style="width:20%">
-  <img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" style="width:20%">
+  <img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%>
+  <img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%>
+  <img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%>
 </div>
 
