--- a/3D.Rmd
+++ b/3D.Rmd
@@ -9,4 +9,6 @@ title: "3D Projects"
 <div> <img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%> </div>
 <div> <img src="../graphics/img/ceramics/pitchers_800_600.jpg" alt="Pitchers" width=20%> </div>
 
+test
+
 
