--- a/about.Rmd
+++ b/about.Rmd
@@ -17,3 +17,15 @@ Most recently, I worked at the Learning Systems Institute at Florida State Unive
 Before that, I served as a Fellow for the National Science Foundation Graduate Students in K-12 Education (GK-12) Program. I partnered with an 8th-grade teacher and we collaborated to bring data visualization lessons to middle school students. We eventually published my lesson on creating and studying the social network generated from a simulated virus spreading through the population. 
 
 Another great experience I had was as a Project Counselor with the NASA Spaceflight and Life Sciences Training Program (SLSTP), administered by Tuskeegee University and hosted at the Life Sciences Laboratory at Kennedy Space Center in Cape Canaveral, Florida. Along with two other PCs, I mentored a group of undergraduate students over six weeks as they got first-hand research experience with NASA experts.
+
+### Teaching Philosophy
+My approach to teaching involves knowledge, tools, connections, and experiences. I focus on building knowledge from existing understanding that each student brings with them into a learning experience, engaging students to utilize tools that can facilitate a more rapid internalization of ideas and methods, striving to create connections between the real world and the abstract concepts presented to students so that classroom discussions have tangible meaning to each learner, and engaging students in memorable experiences of discovery.
+
+Our understanding of life, and how it functions, changes as new knowledge ???ows in from research. My philosophy involves attention to communication of current understanding and practices, but also instilling in students an ability and openness to receive new knowledge for incorporation into their existing understanding. As scientists, we must be receptive to changes in our ???elds, but must also maintain healthy skepticism. As part of learning about science, students must adopt practices which can carry them forward as lifelong learners and understand that knowledge is plastic and malleable.
+
+A large focus of my instructional methodology is to provide students with the ability to engage in scienti???c discovery through the appropriate use of tools from diverse STEM ???elds and from technology, including both hardware and software. In this way, students are not only exposed to hands-on learning, but they also ???nd that their knowledge of tools provides them with real-world skills that are marketable in their own right. I strive to stay current with regard to technology that may have broader impacts in classroom settings, even when the original intended application is for non-educational use. My recent work involves visual media, 3D printing, and statistical analysis coding to help convey abstract concepts, but also to train learners to create their own knowledge.
+
+I think one of the best ways to incorporate knowledge is to relate new information to existing information, either by expansion, modi???cation, or replacement of current understanding. For this reason, I try to understand what students know and use their own abilities to create common ground for connections to the new information they are learning. Typically, this happens through multiple examples until the connections occur, but sometimes I ???nd it useful to have students reiterate their understanding in a di???erent framework to explain the new information back to me in terms that make sense from the students point of view. Flipping the role of teacher and student allows students to develop the ownership of a particular concept and I think this drives a stronger internal connection that leads to learning and not just memorization.
+While books and other published media o???er certain advantages, research and communication experiences o???er their own unique opportunity for unstructured problem and solution development. I believe that the practical application of academic knowledge o???ers students a chance to develop an internal framework for problem solving, while utilizing the knowledge and skills they learned about in the classroom. As part of completing scienti???c exercises, I expect students, and teachers, to employ their abilities and connect the dots from research question development to publication in some form. A strong capstone method I have used in teacher professional development involves creating teams of participants, which then jointly devise, complete, and present a research study while utilizing content knowledge, research methods, and data collection and analysis tools. During the communication experience, groups share how and why they studied their topic, but also learn about the shortcomings of their own work and how they might improve upon it at a later time. I ???nd these experiences to be highly e???ective in not only creating an integrated learning environment for STEM content, but also in creating understanding about a more complete scienti???c process that bridges existing and new knowledge.
+
+I believe the best result of teaching is a student prepared to learn beyond the current setting. As we strive to develop students into prepared lifelong learners, I feel we should use experiences and appropriate tools to create an environment where they can learn not only the established content speci???c to each discipline, but also a method for continuing their learning journey.
