--- a/2D.Rmd
+++ b/2D.Rmd
@@ -2,4 +2,4 @@
 title: "2D Projects"
 ---
 
-2D projects I've completed.
+From time to time, I enjoy creating 2D art, typically nature photography related to plants, fungi, and small details not normally noticed. 
